Thu Nov  6 13:08:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Buffer_Stream_Test.cpp:
        * tests/MEM_Stream_Test.cpp:
        * tests/MM_Shared_Memory_Test.cpp
        * tests/Priority_Task_Test.cpp
          Removed WinCE specific code

        * tests/Bug_3432_Regression_Test.cpp:
          This test needs strftime, if is not there, just print a message
          and exit

        * tests/Notify_Performance_Test.cpp:
        * tests/Reactor_Performance_Test.cpp
          WFMO_Reactor is dependent on winsock2

Thu Nov  6 12:00:00 UTC 2008  Simon Massey <sma at prismtech dot com>

        * tests/Process_Test.cpp:
          Apply modified patch to correct for problems on scoreboard.

Thu Nov  6 09:48:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/TestTarget.pm
        * bin/PerlACE/README:
          Added PROCESS_START_WAIT_INTERVAL and PROCESS_STOP_WAIT_INTERVAL
          as environment variables so that we can configure a longer wait
          time.

        * bin/PerlACE/TestTarget_WinCE.pm:
          Removed ProcessStartWaitInterval method, not needed

Thu Nov  6 08:22:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3432_Regression_Test.cpp:
        * tests/CDR_File_Test.cpp:
        * tests/Message_Queue_Test.cpp:
        * tests/OS_Test.cpp:
        * tests/Process_Manager_Test.cpp:
        * ace/Service_Repository.cpp:
        * tests/TP_Reactor_Test.cpp:
          Fixed unicode problems

        * tests/run_test.pl:
          Add the process startup time to the test time, improves the
          test results on slow systems

Wed Nov  5 19:23:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
        * bin/PerlACE/ProcessWinCE.pm:
        * bin/PerlACE/TestTarget_VxWorks.pm:
        * bin/PerlACE/TestTarget_WinCE.pm:
          Store a reference to the target in the process and set the